GNOME Bugzilla – Bug 681196
0.11 transcoding ogg to ogg fails - theoraerror
Last modified: 2012-08-24 14:58:20 UTC
Using Transmageddon transcoding ogg to ogg fails, with what seems to be a video related error. I can reproduce with gst-launch: gst-launch-1.0 filesrc location=testclip.ogg ! oggdemux ! theoradec ! theoraenc ! oggmux ! filesink location=vorbis.ogg Setting pipeline to PAUSED ... Pipeline is PREROLLING ... Pipeline is PREROLLED ... Setting pipeline to PLAYING ... New clock: GstSystemClock ** (gst-launch-1.0:14379): CRITICAL **: gst_video_encoder_allocate_output_frame: assertion `size > 0' failed ERROR: from element /GstPipeline:pipeline0/GstOggDemux:oggdemux0: Internal data stream error. Additional debug info: gstoggdemux.c(4505): gst_ogg_demux_loop (): /GstPipeline:pipeline0/GstOggDemux:oggdemux0: stream stopped, reason error Execution ended after 5924398482 ns. Setting pipeline to PAUSED ... Setting pipeline to READY ... Setting pipeline to NULL ... Freeing pipeline ...
The testclip used is here: http://www.linuxrising.org/files/misc/testclip.ogg
That sample clip is a bit broken: tpm@zingle:~$ oggz-validate ~/samples/misc/681196-testclip.ogg /home/tpm/samples/misc/681196-testclip.ogg: Error: 00:00:06.740: serialno 0295977400: Packet out of order (previous 00:00:06.773) 00:00:00.000: serialno 0295977400: Packet out of order (previous 00:00:06.740) 00:00:07.140: serialno 0295977400: Packet out of order (previous 00:00:07.207) 00:00:07.140: serialno 0295977400: Granulepos decreasing within track 00:00:00.000: serialno 0295977400: Packet out of order (previous 00:00:07.140) 00:00:00.000: serialno 0295977400: Packet out of order (previous 00:00:07.350) 00:00:07.640: serialno 0295977400: Packet out of order (previous 00:00:07.707) 00:00:07.640: serialno 0295977400: Granulepos decreasing within track 00:00:07.941: serialno 0295977400: Packet out of order (previous 00:00:08.008) 00:00:07.941: serialno 0295977400: Granulepos decreasing within track 00:00:00.000: serialno 0295977400: Packet out of order (previous 00:00:08.073) oggz-validate --max-errors 10: maximum error count reached, bailing out ... However, I could reproduce the issue with another clip as well (after ~1350 frames or so).
commit a994ebcf1ba4fd36420957b00e944681dff048ad Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Fri Aug 24 16:56:00 2012 +0200 videoencoder: allow 0 sized output frames Allow 0 sized frames in gst_video_encoder_allocate_output_frame(). Theora encodes repeat frames, for example, as 0 sized buffers. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=681196